--- a/app/globals.css
+++ b/app/globals.css
@@ -47,3 +47,11 @@ body {
 .shape-divider-dark .shape-fill {
   fill: #0F172A;
 }
+
+@media only screen and (max-width: 768px) { 
+  body {
+    width: 100%;
+    height: 100dvh;
+    max-height: -webkit-fill-available;
+  }
+}
