--- a/app/globals.css
+++ b/app/globals.css
@@ -49,9 +49,8 @@ body {
 }
 
 @media only screen and (max-width: 768px) { 
-  body {
+  html, body {
     width: 100%;
     height: 100dvh;
-    max-height: -webkit-fill-available;
   }
 }
