--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,36 @@ body {
   margin: 0;
 }
 
+.slide-up-and-fade {
+  animation: slideUpAndFade 1s ease-in-out;
+}
+
+.fade-in {
+  animation: fade-in 1s ease-in-out;
+}
+
+/* hero container animation */
+@keyframes slideUpAndFade {
+  0% {
+    opacity: 0;
+    transform: translateY(20%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* spline image animation */
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .shape-divider-light,
 .shape-divider-dark {
   position: absolute;
